fix: fixes search input, fix visibility

--- a/book/css/style.css
+++ b/book/css/style.css
@@ -145,7 +145,7 @@ color: #333333;
   }
   .navbar__search {
     margin-left: auto;
-    max-width: 340px;
+    
   }
   .navbar-menu {
     padding-top: 22px;
@@ -154,6 +154,9 @@ color: #333333;
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .search__input {
+    width: 340px;
   }
 }
 @media (max-width: 768px) {
@@ -174,6 +177,7 @@ color: #333333;
     display: flex;
     width: 16px;
     height: 11px;
+    padding: 0;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
